objects/RuleEntry__c.object
<CustomObject>
    <fields>
        <fullName>CriteriaCondition__c</fullName>
        <label>Criteria Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DefaultRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>SFDC-5800: Field to capture the order in which the rule should be fired</description>
        <inlineHelpText>Order of the rule in which it will be executed</inlineHelpText>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutputColumns__c</fullName>
        <label>Output Columns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RuleDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rule Definition</label>
        <referenceTo>RuleDefinition__c</referenceTo>
        <relationshipLabel>Rule Entries</relationshipLabel>
        <relationshipName>Rule_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RuleId__c</fullName>
        <displayFormat>Rule-{0000}</displayFormat>
        <label>Rule Id</label>
        <type>AutoNumber</type>
    </fields>
    <label>Rule Entry</label>
    <nameField>
        <displayFormat>Rule-{0000}</displayFormat>
        <label>Rule Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>